fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,25 @@ body {
   .w-calc-100plus300 {
     width: calc(100% + 300px);
   }
+  .scrollbar::-webkit-scrollbar {
+    width: 20px;
+    height: 20px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: #000000;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #37ff00;
+    border-radius: 100vh;
+    border: 3px solid #f6f7ed;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #6fff00;
+  }
 }
 
 @layer base {
